infra/configs/base/istio/gateway-default.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: istio-default
  namespace: istio-ingress
spec:
  infrastructure:
    labels:
      istio-component: ingressgateway
    parametersRef:
      group: ""
      kind: ConfigMap
      name: istio-default-gw-options
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.isning.moe"
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.isning.moe"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: server-tls-secret
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
